src/snapshots/zeek_language_server__query__test__decls_-2.snap
---
source: src/query.rs
expression: func_decls
---
{
    Decl {
        module: None,
        id: u!("x"),
        fqid: u!("x"),
        kind: Variable,
        is_export: Some(
            false,
        ),
        loc: Some(
            Location {
                range: Range {
                    start: Position {
                        line: 15,
                        character: 34,
                    },
                    end: Position {
                        line: 15,
                        character: 44,
                    },
                },
                selection_range: Range {
                    start: Position {
                        line: 15,
                        character: 40,
                    },
                    end: Position {
                        line: 15,
                        character: 41,
                    },
                },
                uri: InternedUri(Id(_)),
            },
        ),
        documentation: u!("```zeek\nlocal x=1;\n```"),
    },
}
