src/snapshots/zeek_language_server__query__test__decls_weird_modules.snap
---
source: src/query.rs
expression: decls
---
[
    Decl {
        module: None,
        id: u!("x"),
        fqid: u!("x"),
        kind: Module,
        is_export: None,
        loc: None,
        documentation: u!("```zeek\nx\n```"),
    },
    Decl {
        module: String(
            u!("x"),
        ),
        id: u!("f1"),
        fqid: u!("x::f1"),
        kind: FuncDecl(
            Signature {
                result: None,
                args: [],
            },
        ),
        is_export: Some(
            true,
        ),
        loc: Some(
            Location {
                range: Range {
                    start: Position {
                        line: 2,
                        character: 0,
                    },
                    end: Position {
                        line: 2,
                        character: 22,
                    },
                },
                selection_range: Range {
                    start: Position {
                        line: 2,
                        character: 7,
                    },
                    end: Position {
                        line: 2,
                        character: 9,
                    },
                },
                uri: InternedUri(Id(_)),
            },
        ),
        documentation: u!("```zeek\nglobal f1: function();\n```"),
    },
    Decl {
        module: String(
            u!("foo"),
        ),
        id: u!("f2"),
        fqid: u!("foo::f2"),
        kind: FuncDecl(
            Signature {
                result: None,
                args: [],
            },
        ),
        is_export: Some(
            true,
        ),
        loc: Some(
            Location {
                range: Range {
                    start: Position {
                        line: 3,
                        character: 0,
                    },
                    end: Position {
                        line: 3,
                        character: 27,
                    },
                },
                selection_range: Range {
                    start: Position {
                        line: 3,
                        character: 7,
                    },
                    end: Position {
                        line: 3,
                        character: 14,
                    },
                },
                uri: InternedUri(Id(_)),
            },
        ),
        documentation: u!("```zeek\nglobal foo::f2: function();\n```"),
    },
    Decl {
        module: Global,
        id: u!("f3"),
        fqid: u!("f3"),
        kind: FuncDecl(
            Signature {
                result: None,
                args: [],
            },
        ),
        is_export: Some(
            true,
        ),
        loc: Some(
            Location {
                range: Range {
                    start: Position {
                        line: 4,
                        character: 0,
                    },
                    end: Position {
                        line: 4,
                        character: 30,
                    },
                },
                selection_range: Range {
                    start: Position {
                        line: 4,
                        character: 7,
                    },
                    end: Position {
                        line: 4,
                        character: 17,
                    },
                },
                uri: InternedUri(Id(_)),
            },
        ),
        documentation: u!("```zeek\nglobal GLOBAL::f3: function();\n```"),
    },
]
