src/snapshots/zeek_language_server__query__test__fn_like_decls.snap
---
source: src/query.rs
expression: "super::decls_(&db.0, root, uri, source.as_bytes())"
---
{
    Decl {
        module: None,
        id: u!("fn"),
        fqid: u!("fn"),
        kind: FuncDecl(
            Signature {
                result: Some(
                    String,
                ),
                args: [
                    Decl {
                        module: None,
                        id: u!("n"),
                        fqid: u!("n"),
                        kind: Variable,
                        is_export: None,
                        loc: Some(
                            Location {
                                range: Range {
                                    start: Position {
                                        line: 1,
                                        character: 20,
                                    },
                                    end: Position {
                                        line: 1,
                                        character: 21,
                                    },
                                },
                                selection_range: Range {
                                    start: Position {
                                        line: 1,
                                        character: 20,
                                    },
                                    end: Position {
                                        line: 1,
                                        character: 28,
                                    },
                                },
                                uri: InternedUri(Id(_)),
                            },
                        ),
                        documentation: u!("```zeek\nn: count\n```"),
                    },
                ],
            },
        ),
        is_export: Some(
            false,
        ),
        loc: Some(
            Location {
                range: Range {
                    start: Position {
                        line: 1,
                        character: 0,
                    },
                    end: Position {
                        line: 1,
                        character: 38,
                    },
                },
                selection_range: Range {
                    start: Position {
                        line: 1,
                        character: 7,
                    },
                    end: Position {
                        line: 1,
                        character: 9,
                    },
                },
                uri: InternedUri(Id(_)),
            },
        ),
        documentation: u!("```zeek\nglobal fn: function(n: count): string;\n```"),
    },
    Decl {
        module: None,
        id: u!("ev"),
        fqid: u!("ev"),
        kind: EventDecl(
            Signature {
                result: None,
                args: [
                    Decl {
                        module: None,
                        id: u!("c"),
                        fqid: u!("c"),
                        kind: Variable,
                        is_export: None,
                        loc: Some(
                            Location {
                                range: Range {
                                    start: Position {
                                        line: 2,
                                        character: 17,
                                    },
                                    end: Position {
                                        line: 2,
                                        character: 18,
                                    },
                                },
                                selection_range: Range {
                                    start: Position {
                                        line: 2,
                                        character: 17,
                                    },
                                    end: Position {
                                        line: 2,
                                        character: 30,
                                    },
                                },
                                uri: InternedUri(Id(_)),
                            },
                        ),
                        documentation: u!("```zeek\nc: connection\n```"),
                    },
                    Decl {
                        module: None,
                        id: u!("os"),
                        fqid: u!("os"),
                        kind: Variable,
                        is_export: None,
                        loc: Some(
                            Location {
                                range: Range {
                                    start: Position {
                                        line: 2,
                                        character: 32,
                                    },
                                    end: Position {
                                        line: 2,
                                        character: 34,
                                    },
                                },
                                selection_range: Range {
                                    start: Position {
                                        line: 2,
                                        character: 32,
                                    },
                                    end: Position {
                                        line: 2,
                                        character: 50,
                                    },
                                },
                                uri: InternedUri(Id(_)),
                            },
                        ),
                        documentation: u!("```zeek\nos: endpoint_stats\n```"),
                    },
                    Decl {
                        module: None,
                        id: u!("rs"),
                        fqid: u!("rs"),
                        kind: Variable,
                        is_export: None,
                        loc: Some(
                            Location {
                                range: Range {
                                    start: Position {
                                        line: 2,
                                        character: 52,
                                    },
                                    end: Position {
                                        line: 2,
                                        character: 54,
                                    },
                                },
                                selection_range: Range {
                                    start: Position {
                                        line: 2,
                                        character: 52,
                                    },
                                    end: Position {
                                        line: 2,
                                        character: 70,
                                    },
                                },
                                uri: InternedUri(Id(_)),
                            },
                        ),
                        documentation: u!("```zeek\nrs: endpoint_stats\n```"),
                    },
                ],
            },
        ),
        is_export: Some(
            false,
        ),
        loc: Some(
            Location {
                range: Range {
                    start: Position {
                        line: 2,
                        character: 0,
                    },
                    end: Position {
                        line: 2,
                        character: 72,
                    },
                },
                selection_range: Range {
                    start: Position {
                        line: 2,
                        character: 7,
                    },
                    end: Position {
                        line: 2,
                        character: 9,
                    },
                },
                uri: InternedUri(Id(_)),
            },
        ),
        documentation: u!("```zeek\nglobal ev: event(c: connection, os: endpoint_stats, rs: endpoint_stats);\n```"),
    },
    Decl {
        module: None,
        id: u!("hk"),
        fqid: u!("hk"),
        kind: HookDecl(
            Signature {
                result: None,
                args: [
                    Decl {
                        module: None,
                        id: u!("info"),
                        fqid: u!("info"),
                        kind: Variable,
                        is_export: None,
                        loc: Some(
                            Location {
                                range: Range {
                                    start: Position {
                                        line: 3,
                                        character: 16,
                                    },
                                    end: Position {
                                        line: 3,
                                        character: 20,
                                    },
                                },
                                selection_range: Range {
                                    start: Position {
                                        line: 3,
                                        character: 16,
                                    },
                                    end: Position {
                                        line: 3,
                                        character: 26,
                                    },
                                },
                                uri: InternedUri(Id(_)),
                            },
                        ),
                        documentation: u!("```zeek\ninfo: Info\n```"),
                    },
                    Decl {
                        module: None,
                        id: u!("s"),
                        fqid: u!("s"),
                        kind: Variable,
                        is_export: None,
                        loc: Some(
                            Location {
                                range: Range {
                                    start: Position {
                                        line: 3,
                                        character: 28,
                                    },
                                    end: Position {
                                        line: 3,
                                        character: 29,
                                    },
                                },
                                selection_range: Range {
                                    start: Position {
                                        line: 3,
                                        character: 28,
                                    },
                                    end: Position {
                                        line: 3,
                                        character: 35,
                                    },
                                },
                                uri: InternedUri(Id(_)),
                            },
                        ),
                        documentation: u!("```zeek\ns: Seen\n```"),
                    },
                    Decl {
                        module: None,
                        id: u!("items"),
                        fqid: u!("items"),
                        kind: Variable,
                        is_export: None,
                        loc: Some(
                            Location {
                                range: Range {
                                    start: Position {
                                        line: 3,
                                        character: 37,
                                    },
                                    end: Position {
                                        line: 3,
                                        character: 42,
                                    },
                                },
                                selection_range: Range {
                                    start: Position {
                                        line: 3,
                                        character: 37,
                                    },
                                    end: Position {
                                        line: 3,
                                        character: 53,
                                    },
                                },
                                uri: InternedUri(Id(_)),
                            },
                        ),
                        documentation: u!("```zeek\nitems: set[Item]\n```"),
                    },
                ],
            },
        ),
        is_export: Some(
            false,
        ),
        loc: Some(
            Location {
                range: Range {
                    start: Position {
                        line: 3,
                        character: 0,
                    },
                    end: Position {
                        line: 3,
                        character: 55,
                    },
                },
                selection_range: Range {
                    start: Position {
                        line: 3,
                        character: 7,
                    },
                    end: Position {
                        line: 3,
                        character: 9,
                    },
                },
                uri: InternedUri(Id(_)),
            },
        ),
        documentation: u!("```zeek\nglobal hk: hook(info: Info, s: Seen, items: set[Item]);\n```"),
    },
}
