src/snapshots/zeek_language_server__query__test__fn_param_decls.snap
---
source: src/query.rs
expression: decls
---
[
    Decl {
        module: None,
        id: u!("x"),
        fqid: u!("x"),
        kind: Variable,
        is_export: None,
        loc: Some(
            Location {
                range: Range {
                    start: Position {
                        line: 1,
                        character: 12,
                    },
                    end: Position {
                        line: 1,
                        character: 13,
                    },
                },
                selection_range: Range {
                    start: Position {
                        line: 1,
                        character: 12,
                    },
                    end: Position {
                        line: 1,
                        character: 20,
                    },
                },
                uri: InternedUri(Id(_)),
            },
        ),
        documentation: u!("```zeek\nx: count\n```"),
    },
    Decl {
        module: None,
        id: u!("y"),
        fqid: u!("y"),
        kind: Variable,
        is_export: None,
        loc: Some(
            Location {
                range: Range {
                    start: Position {
                        line: 1,
                        character: 22,
                    },
                    end: Position {
                        line: 1,
                        character: 23,
                    },
                },
                selection_range: Range {
                    start: Position {
                        line: 1,
                        character: 22,
                    },
                    end: Position {
                        line: 1,
                        character: 31,
                    },
                },
                uri: InternedUri(Id(_)),
            },
        ),
        documentation: u!("```zeek\ny: string\n```"),
    },
]
